--- a/.travis.yml
+++ b/.travis.yml
@@ -49,10 +49,11 @@ before_script:
   - "if [ $TRAVIS_OS_NAME == osx ] && [ $BUILD_TYPE == android ]; then \
         brew tap caskroom/cask
         brew update;
-        brew cask install java;
+        brew cask install caskroom/versions/java8;
         brew cask install android-sdk;
         brew install ant;
-        export ANDROID_SDK=/usr/local/opt/android-sdk;
+        export ANDROID_SDK="/usr/local/share/android-sdk";
+        export ANDROID_SDK_ROOT="/usr/local/share/android-sdk";
 
         wget --quiet --continue http://dl.google.com/android/repository/android-ndk-r12b-darwin-x86_64.zip -O ndk.zip;
         unzip -o -q ndk.zip;
@@ -60,7 +61,7 @@ before_script:
 
         export ANDROID_HOME=$ANDROID_SDK;
         export PATH=${ANDROID_SDK}/tools:${ANDROID_SDK}/platform-tools:${ANDROID_NDK}:${PATH};
-        echo \"y\" | android update sdk -a -u -s -t platform-tools,build-tools-24.0.1,android-22;
+        echo \"y\" | sdkmanager "platform-tools" "build-tools-24.0.1" "platforms;android-22"
     fi"
   - "if [ $TRAVIS_OS_NAME == linux ] && [ $BUILD_TYPE == android ]; then \
         wget --quiet --continue http://dl.google.com/android/repository/android-ndk-r12b-linux-x86_64.zip -O ndk.zip;
