--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
   matrix:
     - BUILD_TYPE=android
     - BUILD_TYPE=native
-    # - BUILD_TYPE=emscripten
+    - BUILD_TYPE=emscripten
 
 addons:
   coverity_scan:
