--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)
 
-SET(CMAKE_C_FLAGS_DEBUG "/MTd /Z7 /Od")
+# SET(CMAKE_C_FLAGS_DEBUG "/MTd /Z7 /Od")
 add_subdirectory(dependencies)
 
 set ( SDL2_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dependencies/SDL/include )
