add bullet lib to android

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,7 @@ IF (EMSCRIPTEN)
     ${SDL2_LIBRARY}
     ${ASSIMP_LIBRARY}
     ${IMGUI_LIBRARY}
+    ${BULLET_LIBRARY}
   )
 
   set(ENGINE_INCLUDES
