link bullet in emscripten build, lol commit master

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ IF (EMSCRIPTEN)
   set(ENGINE_LIBS
     ${ASSIMP_LIBRARY}
     ${IMGUI_LIBRARY}
+    ${BULLET_LIBRARY}
   )
 
   set(ENGINE_INCLUDES
