Added skeletal animation system contribution by Majid Anjidani

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -83,7 +83,7 @@ add_definitions(-DASSIMP_BUILD_NO_MD2_EXPORTER)
 set( ASSIMP_BUILD_MD3_IMPORTER OFF CACHE BOOL "Build importer" )
 add_definitions(-DASSIMP_BUILD_NO_MD3_EXPORTER)
 
-set( ASSIMP_BUILD_MD5_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_MD5_IMPORTER ON CACHE BOOL "Build importer" )
 add_definitions(-DASSIMP_BUILD_NO_MD5_EXPORTER)
 
 set( ASSIMP_BUILD_MDC_IMPORTER OFF CACHE BOOL "Build importer" )
@@ -155,7 +155,7 @@ add_definitions(-DASSIMP_BUILD_NO_TERRAGEN_EXPORTER)
 set( ASSIMP_BUILD_3D_IMPORTER OFF CACHE BOOL "Build importer" )
 add_definitions(-DASSIMP_BUILD_NO_3D_EXPORTER)
 
-set( ASSIMP_BUILD_X_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_X_IMPORTER ON CACHE BOOL "Build importer" )
 add_definitions(-DASSIMP_BUILD_NO_XFILE_EXPORTER)
 
 set( ASSIMP_BUILD_GLTF_IMPORTER OFF CACHE BOOL "Build importer" )
